# trading-skills

./: .gitignore
intraday-sector-analysis/: SKILL.md
intraday-sector-analysis/agents/: openai.yaml
intraday-sector-analysis/python/src/trading_skills_data/: __init__.py  normalize.py  sectors.py
intraday-sector-analysis/references/: output-format.md  scoring-rules.md  tool-playbook.md
intraday-sector-analysis/scripts/: sector_data.py
sector-rotation-analysis/: .env.example  SKILL.md
sector-rotation-analysis/agents/: openai.yaml
sector-rotation-analysis/python/: pyproject.toml
sector-rotation-analysis/python/src/trading_skills_data/: errors.py  normalize.py  sectors.py
sector-rotation-analysis/references/: news-keywords.md  output-format.md  scoring-rules.md  tool-playbook.md
sector-rotation-analysis/scripts/: sector_data.py
