[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-skills-data"
version = "0.1.0"
description = "Local uv-backed sector data scripts for trading skills"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.21",
    "akshare-proxy-patch>=0.2.9",
    "pandas>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
